# taxi-prediction-fullstack-ludvig-opa24

./: .dockerignore  README.md  backend.Dockerfile  direction_results.json  docker-compose.yml  frontend.Dockerfile  main.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/taxipred/backend/: api.py  data_processing.py
src/taxipred/backend/models/: broad_responsible_xgb_model.joblib
src/taxipred/backend/notebooks/: taxi_eda.ipynb  taxi_generate_models.ipynb  taxi_nan_ml_refill.ipynb
src/taxipred/data/: taxi_trip_pricing_imputed.csv  taxi_trip_pricing_numeric_repaired.csv
src/taxipred/frontend/: dashboard.py
src/taxipred/utils/: constants.py  helpers.py
