[project]
name = "taxipred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.2",
    "googlemaps>=4.10.0",
    "ipykernel>=6.30.1",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.5",
]

# INSTRUCTION 1: "Find my code packages in the 'src' directory."
[tool.setuptools.packages.find]
where = ["src"]

# INSTRUCTION 2: "Also, make sure to include these specific data files."
[tool.setuptools.package-data]
taxipred = ["data/*", "backend/models/*"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]
